fix up alignment

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -5,7 +5,7 @@
 }
 
 .wrapper p a {
-    display: inline-block;
+    width: max-content;
 }
 
 .technical-skills-tags-container {
